# TransPic

./: README.md  backend.py  backend_gemini_test.py  dashboard.py  example.env  pyproject.toml  streamlit_app.py  streamlit_gemini.py
notebook/: Image_captioning_using_PaliGemma.ipynb  Workshop_How_to_Fine_tuning_Gemma.ipynb  fine-tuning-paligemma.ipynb
