[project]
name = "TransPic"
version = "0.1.0"
description = "Add your description here"
authors = [
    {name = "3miki", email = "90838632+3miki@users.noreply.github.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40.1",
    "python-dotenv>=1.0.1",
    "transformers>=4.46.3",
    "torch>=2.5.1",
    "accelerate>=1.1.1",
    "huggingface-hub>=0.26.3",
    "watchdog>=6.0.0",
]
